Add product category.
